Replace Theia Blueprint Branding with CDT Cloud
- Adapt README
- Adapt Github Templates
- Adapt build scripts and tests
- Update to compatible MemoryInspector and Trace Viewer versions
- Adapt Jenkins builds
- Adapt Welcome Page

Contributed on behalf of STMicroelectronics

--- a/applications/electron/electron-builder.yml
+++ b/applications/electron/electron-builder.yml
@@ -1,5 +1,5 @@
 appId: eclipse.theia
-productName: TheiaBlueprint
+productName: CDTCloudBlueprint
 copyright: Copyright © 2020 Eclipse Foundation, Inc
 electronDist: ../../node_modules/electron/dist
 electronVersion: 15.3.6
