--- a/applications/electron/package.json
+++ b/applications/electron/package.json
@@ -1,19 +1,19 @@
 {
   "private": true,
-  "name": "theia-blueprint-for-c",
-  "description": "Eclipse Theia blueprint product for C-development",
-  "productName": "Theia Blueprint for C",
+  "name": "cdt-cloud-blueprint",
+  "description": "CDT.cloud Blueprint is a template for building custom web-based C/C++ tools",
+  "productName": "CDT.cloud Blueprint",
   "version": "1.22.1",
   "main": "scripts/theia-electron-main.js",
   "license": "EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0",
-  "author": "Eclipse Theia <theia-dev@eclipse.org>",
-  "homepage": "https://github.com/eclipse-theia/theia-blueprint#readme",
+  "author": "CDT.cloud <sdirix@eclipsesource.com>",
+  "homepage": "https://cdt-cloud.io/",
   "bugs": {
-    "url": "https://github.com/eclipse-theia/theia/issues"
+    "url": "https://github.com/eclipse-cdt-cloud/cdt-cloud-blueprint/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/eclipse-theia/theia-blueprint.git"
+    "url": "git+https://github.com/eclipse-cdt-cloud/cdt-cloud-blueprint.git"
   },
   "engines": {
     "yarn": "1.0.x || >=1.2.1",
@@ -23,7 +23,7 @@
     "target": "electron",
     "frontend": {
       "config": {
-        "applicationName": "Theia Blueprint for C"
+        "applicationName": "CDTCloudBlueprint"
       }
     },
     "backend": {
@@ -79,10 +79,10 @@
     "@theia/vsx-registry": "1.22.1",
     "@theia/workspace": "1.22.1",
     "fs-extra": "^9.0.1",
-    "theia-blueprint-updater": "1.22.1",
-    "theia-blueprint-product": "1.22.1",
-    "@theia/cpp-debug": "1.22.1",
-    "theia-traceviewer": "0.1.0"
+    "cdt-cloud-blueprint-updater": "1.22.1",
+    "cdt-cloud-blueprint-product": "1.22.1",
+    "@theia/cpp-debug": "1.19.0",
+    "theia-traceviewer": "0.2.0-next.61895a7.0"
   },
   "devDependencies": {
     "@theia/cli": "1.22.1",
