--- a/theia-extensions/theia-blueprint-product/package.json
+++ b/theia-extensions/theia-blueprint-product/package.json
@@ -1,8 +1,8 @@
 {
   "private": true,
-  "name": "theia-blueprint-product",
+  "name": "cdt-cloud-blueprint-product",
   "version": "1.22.1",
-  "description": "Eclipse Theia Blueprint Product Branding",
+  "description": "CDT.cloud Blueprint Product Branding",
   "dependencies": {
     "@theia/core": "1.22.1",
     "@theia/getting-started": "1.22.1",
@@ -28,12 +28,12 @@
   "license": "EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/eclipse-theia/theia-blueprint.git"
+    "url": "https://github.com/eclipse-cdt-cloud/cdt-cloud-blueprint.git"
   },
   "bugs": {
-    "url": "https://github.com/eclipse-theia/theia-blueprint/issues"
+    "url": "https://github.com/eclipse-cdt-cloud/cdt-cloud-blueprint/issues"
   },
-  "homepage": "https://github.com/eclipse-theia/theia-blueprint",
+  "homepage": "https://cdt-cloud.io/",
   "files": [
     "lib",
     "src"
