--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "private": true,
   "version": "1.22.1",
   "license": "EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0",
-  "author": "Stefan Dirix <sdirix@eclipsesource.com>",
+  "author": {
+    "name": "CDT.cloud"
+  },
   "homepage": "https://cdt-cloud.io/",
   "bugs": {
     "url": "https://github.com/eclipse-cdt-cloud/cdt-cloud-blueprint/issues"
