--- a/applications/electron/package.json
+++ b/applications/electron/package.json
@@ -7,15 +7,9 @@
   "main": "scripts/theia-electron-main.js",
   "license": "EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0",
   "author": {
-    "name": "CDT.cloud"
+    "name": "CDT.cloud",
+    "email": "cdt-cloud-dev@eclipse.org"
   },
-  "contributors": [
-    {
-      "name": "CDT.cloud Project",
-      "email": "cdt-cloud-dev@eclipse.org",
-      "url": "https://projects.eclipse.org/projects/ecd.cdt.cloud"
-    }
-  ],
   "homepage": "https://cdt-cloud.io/",
   "bugs": {
     "url": "https://github.com/eclipse-cdt-cloud/cdt-cloud-blueprint/issues"
