Migration of the initial C/C++ Blueprint to CDT.cloud
Polishes and integrates the initial C/C++ Blueprint into the CDT.cloud project
and updates to the latest state of Theia Blueprint and the included extensions.

CDT.cloud Blueprint is based on Theia Blueprint. The main user facing
differences are the inclusion of C/C++ related Theia and VS Code extensions as
well as a rebranding to CDT.cloud.

Concretely we added the '@theia/cpp-debug' (Memory Inspector) and
'theia-traceviewer' (Trace Compass) Theia extensions and exchanged all Java
related VS Code extensions with a selected list of C/C++ related VS Code
extensions, i.e. the built-in VS Code CPP extensions as well as the Eclipse
CDT GDB adapter, clangd and the CMake tools.

The rebranding includes all user-facing texts and links. It does not yet
include logo changes. Other changes correspond to the build scrips, test cases,
Github repositories and different project setups.

Contributed on behalf of STMicroelectronics

Co-authored-by: Johannes Faltermeier <jfaltermeier@eclipsesource.com>
Co-authored-by: Eugen Neufeld <eneufeld@eclipsesource.com>

--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "private": true,
   "version": "1.22.1",
   "license": "EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0",
-  "author": "Rob Moran <github@thegecko.org>",
-  "homepage": "https://github.com/eclipse-theia/theia-blueprint#readme",
+  "author": {
+    "name": "CDT.cloud"
+  },
+  "homepage": "https://cdt-cloud.io/",
   "bugs": {
-    "url": "https://github.com/eclipse-theia/theia/issues"
+    "url": "https://github.com/eclipse-cdt-cloud/cdt-cloud-blueprint/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/eclipse-theia/theia-blueprint.git"
+    "url": "git+https://github.com/eclipse-cdt-cloud/cdt-cloud-blueprint.git"
   },
   "engines": {
     "yarn": "1.0.x || >=1.2.1",
@@ -43,6 +45,12 @@
     "test": "lerna run test",
     "electron": "yarn --cwd applications/electron",
     "update:next": "ts-node scripts/update-theia-to-next.ts && lerna run update:next"
+  },
+  "resolutions": {
+    "**/@theia/core": "1.22.1",
+    "**/@theia/debug": "1.22.1",
+    "**/@theia/editor": "1.22.1",
+    "**/@theia/filesystem": "1.22.1"
   },
   "workspaces": [
     "applications/*",
