--- a/applications/electron/package.json
+++ b/applications/electron/package.json
@@ -1,19 +1,22 @@
 {
   "private": true,
-  "name": "theia-blueprint",
-  "description": "Eclipse Theia blueprint product",
-  "productName": "Theia Blueprint",
+  "name": "cdt-cloud-blueprint",
+  "description": "CDT.cloud Blueprint is a template for building custom web-based C/C++ tools",
+  "productName": "CDT.cloud Blueprint",
   "version": "1.22.1",
   "main": "scripts/theia-electron-main.js",
   "license": "EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0",
-  "author": "Eclipse Theia <theia-dev@eclipse.org>",
-  "homepage": "https://github.com/eclipse-theia/theia-blueprint#readme",
+  "author": {
+    "name": "CDT.cloud",
+    "email": "cdt-cloud-dev@eclipse.org"
+  },
+  "homepage": "https://cdt-cloud.io/",
   "bugs": {
-    "url": "https://github.com/eclipse-theia/theia/issues"
+    "url": "https://github.com/eclipse-cdt-cloud/cdt-cloud-blueprint/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/eclipse-theia/theia-blueprint.git"
+    "url": "git+https://github.com/eclipse-cdt-cloud/cdt-cloud-blueprint.git"
   },
   "engines": {
     "yarn": "1.0.x || >=1.2.1",
@@ -23,7 +26,7 @@
     "target": "electron",
     "frontend": {
       "config": {
-        "applicationName": "Theia Blueprint"
+        "applicationName": "CDTCloudBlueprint"
       }
     },
     "backend": {
@@ -64,6 +67,7 @@
     "@theia/plugin-ext": "1.22.1",
     "@theia/plugin-ext-vscode": "1.22.1",
     "@theia/preferences": "1.22.1",
+    "@theia/preview": "1.22.1",
     "@theia/process": "1.22.1",
     "@theia/property-view": "1.22.1",
     "@theia/scm": "1.22.1",
@@ -78,8 +82,10 @@
     "@theia/vsx-registry": "1.22.1",
     "@theia/workspace": "1.22.1",
     "fs-extra": "^9.0.1",
-    "theia-blueprint-updater": "1.22.1",
-    "theia-blueprint-product": "1.22.1"
+    "cdt-cloud-blueprint-updater": "1.22.1",
+    "cdt-cloud-blueprint-product": "1.22.1",
+    "@theia/cpp-debug": "1.19.0",
+    "theia-traceviewer": "0.2.0-next.61895a7.0"
   },
   "devDependencies": {
     "@theia/cli": "1.22.1",
@@ -126,11 +132,10 @@
     "vscode.git": "https://open-vsx.org/api/vscode/git/1.52.1/file/vscode.git-1.52.1.vsix",
     "vscode.markdown-language-features": "https://open-vsx.org/api/vscode/markdown-language-features/1.39.2/file/vscode.markdown-language-features-1.39.2.vsix",
     "vscode-builtin-extensions-pack": "https://open-vsx.org/api/eclipse-theia/builtin-extension-pack/1.50.1/file/eclipse-theia.builtin-extension-pack-1.50.1.vsix",
-    "redhat.java": "https://open-vsx.org/api/redhat/java/0.73.0/file/redhat.java-0.73.0.vsix",
-    "vscjava.vscode-java-debug": "https://open-vsx.org/api/vscjava/vscode-java-debug/0.30.0/file/vscjava.vscode-java-debug-0.30.0.vsix",
-    "vscjava.vscode-java-test": "https://open-vsx.org/api/vscjava/vscode-java-test/0.26.1/file/vscjava.vscode-java-test-0.26.1.vsix",
-    "vscjava.vscode-maven": "https://open-vsx.org/api/vscjava/vscode-maven/0.21.2/file/vscjava.vscode-maven-0.21.2.vsix",
-    "vscjava.vscode-java-dependency": "https://open-vsx.org/api/vscjava/vscode-java-dependency/0.16.0/file/vscjava.vscode-java-dependency-0.16.0.vsix"
+    "cdt-gdb-vscode": "https://open-vsx.org/api/eclipse-cdt/cdt-gdb-vscode/0.0.92/file/eclipse-cdt.cdt-gdb-vscode-0.0.92.vsix",
+    "vscode-builtin-cpp": "https://open-vsx.org/api/vscode/cpp/1.62.3/file/vscode.cpp-1.62.3.vsix",
+    "vscode-clangd": "https://open-vsx.org/api/llvm-vs-code-extensions/vscode-clangd/0.1.15/file/llvm-vs-code-extensions.vscode-clangd-0.1.15.vsix",
+    "vscode-cmake": "https://open-vsx.org/api/ms-vscode/cmake-tools/1.9.2/file/ms-vscode.cmake-tools-1.9.2.vsix"
   },
   "theiaPluginsExcludeIds": [
     "vscode.extension-editing",
