--- a/applications/electron/package.json
+++ b/applications/electron/package.json
@@ -114,10 +114,12 @@
     "prepare": "yarn build && yarn download:plugins",
     "clean": "theia clean && rimraf node_modules",
     "clean:dist": "rimraf dist",
-    "build": "theia rebuild:electron && yarn bundle",
+    "build": "yarn -s compile && yarn -s bundle",
     "bundle": "theia build",
+    "compile": "tsc -b",
+    "rebuild": "theia rebuild:electron --cacheRoot ../..",
     "watch": "concurrently -n compile,bundle \"theiaext watch --preserveWatchOutput\" \"theia build --watch --mode development\"",
-    "start": "electron scripts/theia-electron-main.js",
+    "start": "yarn -s rebuild && electron scripts/theia-electron-main.js",
     "start:debug": "yarn start --log-level=debug",
     "package": "yarn clean:dist && electron-builder -c.mac.identity=null --publish never",
     "deploy": "yarn clean:dist && electron-builder -c.mac.identity=null --publish always",
