--- a/applications/browser/package.json
+++ b/applications/browser/package.json
@@ -72,8 +72,7 @@
         "fs-extra": "^9.0.1",
         "cdt-cloud-blueprint-product": "1.22.1",
         "@theia/cpp-debug": "1.19.0",
-        "theia-traceviewer": "0.2.0-next.61895a7.0",
-        "@theia/playwright": "^1.24.0"
+        "theia-traceviewer": "0.2.0-next.61895a7.0"
     },
     "devDependencies": {
         "@theia/cli": "1.22.1"
