Integrate latest C++ dependencies
Updates traceviewer extension and CMake plugin. Also integrates the
clangd contexts example VS Code extension.

Contributed on behalf of STMicroelectronics

--- a/applications/browser/package.json
+++ b/applications/browser/package.json
@@ -74,7 +74,7 @@
         "fs-extra": "^9.0.1",
         "cdt-cloud-blueprint-product": "1.24.0",
         "@theia/cpp-debug": "1.19.0",
-        "theia-traceviewer": "0.2.0-next.61895a7.0"
+        "theia-traceviewer": "0.2.0-next.033d953.0"
     },
     "devDependencies": {
         "@theia/cli": "1.24.0"
@@ -83,12 +83,11 @@
         "prepare": "yarn build && yarn download:plugins",
         "clean": "theia clean && rimraf node_modules",
         "build": "yarn -s compile && yarn -s bundle",
-        "bundle": "theia build",
+        "bundle": "theia build --mode development",
         "compile": "tsc -b",
         "rebuild": "theia rebuild:browser --cacheRoot ../..",
         "start": "yarn -s rebuild && theia start --plugins=local-dir:./plugins",
         "start:debug": "yarn -s start --log-level=debug",
-        
         "start:watch": "concurrently --kill-others -n tsc,bundle,run -c red,yellow,green \"tsc -b -w --preserveWatchOutput\" \"yarn -s watch:bundle\" \"yarn -s start\"",
         "watch": "concurrently --kill-others -n tsc,bundle -c red,yellow \"tsc -b -w --preserveWatchOutput\" \"yarn -s watch:bundle\"",
         "watch:bundle": "theia build --watch --mode development",
@@ -103,7 +102,8 @@
         "cdt-gdb-vscode": "https://open-vsx.org/api/eclipse-cdt/cdt-gdb-vscode/0.0.92/file/eclipse-cdt.cdt-gdb-vscode-0.0.92.vsix",
         "vscode-builtin-cpp": "https://open-vsx.org/api/vscode/cpp/1.62.3/file/vscode.cpp-1.62.3.vsix",
         "vscode-clangd": "https://open-vsx.org/api/llvm-vs-code-extensions/vscode-clangd/0.1.15/file/llvm-vs-code-extensions.vscode-clangd-0.1.15.vsix",
-        "vscode-cmake": "https://open-vsx.org/api/ms-vscode/cmake-tools/1.9.2/file/ms-vscode.cmake-tools-1.9.2.vsix"
+        "vscode-cmake": "https://open-vsx.org/api/ms-vscode/cmake-tools/1.10.5/file/ms-vscode.cmake-tools-1.10.5.vsix",
+        "cdtcloud-clangd-contexts": "https://github.com/eclipse-cdt-cloud/clangd-contexts/releases/download/v0.8.0/cdtcloud-clangd-contexts-ext-0.8.0.vsix"
     },
     "theiaPluginsExcludeIds": [
         "vscode.extension-editing",
