Fix Publish URLs for Updater and add pause between retries
Contributed on behalf of STMicroelectronics

--- a/applications/electron/tsconfig.json
+++ b/applications/electron/tsconfig.json
@@ -2,7 +2,8 @@
     "extends": "../../configs/base.tsconfig",
     "include": [],
     "compilerOptions": {
-      "composite": true
+      "composite": true,
+      "esModuleInterop": true,
     },
     "references": [
       {
