--- a/applications/electron/package.json
+++ b/applications/electron/package.json
@@ -89,7 +89,8 @@
     "cdt-cloud-blueprint-updater": "1.24.0",
     "cdt-cloud-blueprint-product": "1.24.0",
     "@theia/cpp-debug": "1.19.0",
-    "theia-traceviewer": "0.2.0-next.033d953.0"
+    "theia-traceviewer": "0.2.0-next.033d953.0",
+    "@eclipse-cdt-cloud/blueprint-example-generator": "1.24.0"
   },
   "devDependencies": {
     "@theia/cli": "1.24.0",
