Fix getting started page in browser app

--- a/theia-extensions/blueprint-example-generator/package.json
+++ b/theia-extensions/blueprint-example-generator/package.json
@@ -18,6 +18,7 @@
   "theiaExtensions": [
     {
       "frontendElectron": "lib/browser/example-generator-frontend-module",
+      "frontend": "lib/browser/example-generator-frontend-module",
       "backend": "lib/node/example-generator-backend-module"
     }
   ],
