--- a/applications/browser/tsconfig.json
+++ b/applications/browser/tsconfig.json
@@ -1,13 +1,29 @@
 {
-    "extends": "../../configs/base.tsconfig",
-    "include": [],
-    "compilerOptions": {
+  "compilerOptions": {
+      "skipLibCheck": true,
+      "declaration": true,
+      "declarationMap": true,
+      "noImplicitAny": true,
+      "noEmitOnError": false,
+      "noImplicitThis": true,
+      "noUnusedLocals": true,
+      "strictNullChecks": true,
+      "experimentalDecorators": true,
+      "emitDecoratorMetadata": true,
+      "downlevelIteration": true,
+      "resolveJsonModule": true,
+      "module": "commonjs",
+      "moduleResolution": "node",
+      "target": "ES2017",
+      "jsx": "react",
+      "lib": [
+          "ES2017",
+          "ES2020.Promise",
+          "dom"
+      ],
+      "sourceMap": true,
       "composite": true
-    },
-    "references": [
-      {
-        "path": "../../theia-extensions/theia-blueprint-product"
-      }
-    ]
   }
+}
+
   
