--- a/applications/browser/package.json
+++ b/applications/browser/package.json
@@ -1,112 +1,113 @@
 {
-    "private": true,
-    "name": "cdt-cloud-blueprint-browser",
-    "description": "CDT.cloud Blueprint is a template for building custom web-based C/C++ tools",
-    "license": "EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0",
-    "author": {
-        "name": "CDT.cloud",
-        "email": "cdt-cloud-dev@eclipse.org"
-    },
-    "homepage": "https://cdt-cloud.io/",
-    "bugs": {
-        "url": "https://github.com/eclipse-cdt-cloud/cdt-cloud-blueprint/issues"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/eclipse-cdt-cloud/cdt-cloud-blueprint.git"
-    },
-    "engines": {
-      "yarn": ">=1.7.0 <2",
-      "node": ">=12.14.1"
-    },
-    "theia": {
-        "frontend": {
-            "config": {
-                "applicationName": "CDT Cloud Blueprint",
-                "preferences": {
-                    "toolbar.showToolbar": true,
-                    "files.enableTrash": false
-                }
-            }
-        }
-    },
-    "dependencies": {
-        "@theia/bulk-edit": "1.24.0",
-        "@theia/callhierarchy": "1.24.0",
-        "@theia/console": "1.24.0",
-        "@theia/core": "1.24.0",
-        "@theia/debug": "1.24.0",
-        "@theia/editor": "1.24.0",
-        "@theia/editor-preview": "1.24.0",
-        "@theia/electron": "1.24.0",
-        "@theia/external-terminal": "1.24.0",
-        "@theia/file-search": "1.24.0",
-        "@theia/filesystem": "1.24.0",
-        "@theia/getting-started": "1.24.0",
-        "@theia/keymaps": "1.24.0",
-        "@theia/markers": "1.24.0",
-        "@theia/messages": "1.24.0",
-        "@theia/metrics": "1.24.0",
-        "@theia/mini-browser": "1.24.0",
-        "@theia/monaco": "1.24.0",
-        "@theia/navigator": "1.24.0",
-        "@theia/outline-view": "1.24.0",
-        "@theia/output": "1.24.0",
-        "@theia/plugin-dev": "1.24.0",
-        "@theia/plugin-ext": "1.24.0",
-        "@theia/plugin-ext-vscode": "1.24.0",
-        "@theia/preferences": "1.24.0",
-        "@theia/preview": "1.24.0",
-        "@theia/process": "1.24.0",
-        "@theia/property-view": "1.24.0",
-        "@theia/scm": "1.24.0",
-        "@theia/scm-extra": "1.24.0",
-        "@theia/search-in-workspace": "1.24.0",
-        "@theia/task": "1.24.0",
-        "@theia/terminal": "1.24.0",
-        "@theia/timeline": "1.24.0",
-        "@theia/toolbar": "1.24.0",
-        "@theia/typehierarchy": "1.24.0",
-        "@theia/userstorage": "1.24.0",
-        "@theia/variable-resolver": "1.24.0",
-        "@theia/vsx-registry": "1.24.0",
-        "@theia/workspace": "1.24.0",
-        "fs-extra": "^9.0.1",
-        "cdt-cloud-blueprint-product": "1.24.0",
-        "@theia/cpp-debug": "1.19.0",
-        "theia-traceviewer": "0.2.0-next.033d953.0"
-    },
-    "devDependencies": {
-        "@theia/cli": "1.24.0"
-    },
-    "scripts": {
-        "prepare": "yarn build && yarn download:plugins",
-        "clean": "theia clean && rimraf node_modules",
-        "build": "yarn -s compile && yarn -s bundle",
-        "bundle": "theia build --mode development",
-        "compile": "tsc -b",
-        "rebuild": "theia rebuild:browser --cacheRoot ../..",
-        "start": "yarn -s rebuild && theia start --plugins=local-dir:./plugins",
-        "start:debug": "yarn -s start --log-level=debug",
-        "start:watch": "concurrently --kill-others -n tsc,bundle,run -c red,yellow,green \"tsc -b -w --preserveWatchOutput\" \"yarn -s watch:bundle\" \"yarn -s start\"",
-        "watch": "concurrently --kill-others -n tsc,bundle -c red,yellow \"tsc -b -w --preserveWatchOutput\" \"yarn -s watch:bundle\"",
-        "watch:bundle": "theia build --watch --mode development",
-        "watch:compile": "tsc -b -w",
-        "download:plugins": "theia download:plugins"
-    },
-    "theiaPluginsDir": "plugins",
-    "theiaPlugins": {
-        "vscode.git": "https://open-vsx.org/api/vscode/git/1.52.1/file/vscode.git-1.52.1.vsix",
-        "vscode.markdown-language-features": "https://open-vsx.org/api/vscode/markdown-language-features/1.39.2/file/vscode.markdown-language-features-1.39.2.vsix",
-        "vscode-builtin-extensions-pack": "https://open-vsx.org/api/eclipse-theia/builtin-extension-pack/1.50.1/file/eclipse-theia.builtin-extension-pack-1.50.1.vsix",
-        "cdt-gdb-vscode": "https://open-vsx.org/api/eclipse-cdt/cdt-gdb-vscode/0.0.92/file/eclipse-cdt.cdt-gdb-vscode-0.0.92.vsix",
-        "vscode-builtin-cpp": "https://open-vsx.org/api/vscode/cpp/1.62.3/file/vscode.cpp-1.62.3.vsix",
-        "vscode-clangd": "https://open-vsx.org/api/llvm-vs-code-extensions/vscode-clangd/0.1.15/file/llvm-vs-code-extensions.vscode-clangd-0.1.15.vsix",
-        "vscode-cmake": "https://open-vsx.org/api/ms-vscode/cmake-tools/1.10.5/file/ms-vscode.cmake-tools-1.10.5.vsix",
-        "cdtcloud-clangd-contexts": "https://github.com/eclipse-cdt-cloud/clangd-contexts/releases/download/v0.8.0/cdtcloud-clangd-contexts-ext-0.8.0.vsix"
-    },
-    "theiaPluginsExcludeIds": [
-        "vscode.extension-editing",
-        "vscode.microsoft-authentication"
-    ]
+  "private": true,
+  "name": "cdt-cloud-blueprint-browser",
+  "description": "CDT.cloud Blueprint is a template for building custom web-based C/C++ tools",
+  "license": "EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0",
+  "author": {
+      "name": "CDT.cloud",
+      "email": "cdt-cloud-dev@eclipse.org"
+  },
+  "homepage": "https://cdt-cloud.io/",
+  "bugs": {
+      "url": "https://github.com/eclipse-cdt-cloud/cdt-cloud-blueprint/issues"
+  },
+  "repository": {
+      "type": "git",
+      "url": "git+https://github.com/eclipse-cdt-cloud/cdt-cloud-blueprint.git"
+  },
+  "engines": {
+    "yarn": ">=1.7.0 <2",
+    "node": ">=12.14.1"
+  },
+  "theia": {
+      "frontend": {
+          "config": {
+              "applicationName": "CDT Cloud Blueprint",
+              "preferences": {
+                  "toolbar.showToolbar": true,
+                  "files.enableTrash": false
+              }
+          }
+      }
+  },
+  "dependencies": {
+      "@theia/bulk-edit": "1.24.0",
+      "@theia/callhierarchy": "1.24.0",
+      "@theia/console": "1.24.0",
+      "@theia/core": "1.24.0",
+      "@theia/debug": "1.24.0",
+      "@theia/editor": "1.24.0",
+      "@theia/editor-preview": "1.24.0",
+      "@theia/external-terminal": "1.24.0",
+      "@theia/file-search": "1.24.0",
+      "@theia/filesystem": "1.24.0",
+      "@theia/getting-started": "1.24.0",
+      "@theia/keymaps": "1.24.0",
+      "@theia/markers": "1.24.0",
+      "@theia/messages": "1.24.0",
+      "@theia/metrics": "1.24.0",
+      "@theia/mini-browser": "1.24.0",
+      "@theia/monaco": "1.24.0",
+      "@theia/navigator": "1.24.0",
+      "@theia/outline-view": "1.24.0",
+      "@theia/output": "1.24.0",
+      "@theia/plugin-dev": "1.24.0",
+      "@theia/plugin-ext": "1.24.0",
+      "@theia/plugin-ext-vscode": "1.24.0",
+      "@theia/preferences": "1.24.0",
+      "@theia/preview": "1.24.0",
+      "@theia/process": "1.24.0",
+      "@theia/property-view": "1.24.0",
+      "@theia/scm": "1.24.0",
+      "@theia/scm-extra": "1.24.0",
+      "@theia/search-in-workspace": "1.24.0",
+      "@theia/task": "1.24.0",
+      "@theia/terminal": "1.24.0",
+      "@theia/timeline": "1.24.0",
+      "@theia/toolbar": "1.24.0",
+      "@theia/typehierarchy": "1.24.0",
+      "@theia/userstorage": "1.24.0",
+      "@theia/variable-resolver": "1.24.0",
+      "@theia/vsx-registry": "1.24.0",
+      "@theia/workspace": "1.24.0",
+      "fs-extra": "^9.0.1",
+      "cdt-cloud-blueprint-updater": "1.24.0",
+      "cdt-cloud-blueprint-product": "1.24.0",
+      "@theia/cpp-debug": "1.19.0",
+      "theia-traceviewer": "0.2.0-next.033d953.0",
+      "@eclipse-cdt-cloud/blueprint-example-generator": "1.24.0"
+  },
+  "devDependencies": {
+      "@theia/cli": "1.24.0"
+  },
+  "scripts": {
+      "prepare": "yarn build && yarn download:plugins",
+      "clean": "theia clean && rimraf node_modules",
+      "build": "yarn -s compile && yarn -s bundle",
+      "bundle": "theia build --mode development",
+      "compile": "tsc -b",
+      "rebuild": "theia rebuild:browser --cacheRoot ../..",
+      "start": "yarn -s rebuild && theia start --plugins=local-dir:./plugins",
+      "start:debug": "yarn -s start --log-level=debug",
+      "start:watch": "concurrently --kill-others -n tsc,bundle,run -c red,yellow,green \"tsc -b -w --preserveWatchOutput\" \"yarn -s watch:bundle\" \"yarn -s start\"",
+      "watch": "concurrently --kill-others -n tsc,bundle -c red,yellow \"tsc -b -w --preserveWatchOutput\" \"yarn -s watch:bundle\"",
+      "watch:bundle": "theia build --watch --mode development",
+      "watch:compile": "tsc -b -w",
+      "download:plugins": "theia download:plugins"
+  },
+  "theiaPluginsDir": "plugins",
+  "theiaPlugins": {
+      "vscode.git": "https://open-vsx.org/api/vscode/git/1.52.1/file/vscode.git-1.52.1.vsix",
+      "vscode.markdown-language-features": "https://open-vsx.org/api/vscode/markdown-language-features/1.39.2/file/vscode.markdown-language-features-1.39.2.vsix",
+      "vscode-builtin-extensions-pack": "https://open-vsx.org/api/eclipse-theia/builtin-extension-pack/1.50.1/file/eclipse-theia.builtin-extension-pack-1.50.1.vsix",
+      "cdt-gdb-vscode": "https://open-vsx.org/api/eclipse-cdt/cdt-gdb-vscode/0.0.92/file/eclipse-cdt.cdt-gdb-vscode-0.0.92.vsix",
+      "vscode-builtin-cpp": "https://open-vsx.org/api/vscode/cpp/1.62.3/file/vscode.cpp-1.62.3.vsix",
+      "vscode-clangd": "https://open-vsx.org/api/llvm-vs-code-extensions/vscode-clangd/0.1.15/file/llvm-vs-code-extensions.vscode-clangd-0.1.15.vsix",
+      "vscode-cmake": "https://open-vsx.org/api/ms-vscode/cmake-tools/1.10.5/file/ms-vscode.cmake-tools-1.10.5.vsix",
+      "cdtcloud-clangd-contexts": "https://github.com/eclipse-cdt-cloud/clangd-contexts/releases/download/v0.8.0/cdtcloud-clangd-contexts-ext-0.8.0.vsix"
+  },
+  "theiaPluginsExcludeIds": [
+      "vscode.extension-editing",
+      "vscode.microsoft-authentication"
+  ]
 }
