Stop at main when starting a debug session

--- a/theia-extensions/blueprint-example-generator/resources/cmake-example/.theia/launch.json
+++ b/theia-extensions/blueprint-example-generator/resources/cmake-example/.theia/launch.json
@@ -8,6 +8,7 @@
       "request": "launch",
       "name": "Debug Example C++",
       "program": "${workspaceFolder}/Example",
+      "initCommands": ["tbreak main"],
       "preLaunchTask": "Binary build"
     }
   ]
