--- a/applications/docker/package.json
+++ b/applications/docker/package.json
@@ -31,53 +31,54 @@
     }
   },
   "dependencies": {
-    "@theia/bulk-edit": "1.24.0",
-    "@theia/callhierarchy": "1.24.0",
-    "@theia/console": "1.24.0",
-    "@theia/core": "1.24.0",
-    "@theia/debug": "1.24.0",
-    "@theia/editor": "1.24.0",
-    "@theia/editor-preview": "1.24.0",
-    "@theia/electron": "1.24.0",
-    "@theia/external-terminal": "1.24.0",
-    "@theia/file-search": "1.24.0",
-    "@theia/filesystem": "1.24.0",
-    "@theia/getting-started": "1.24.0",
-    "@theia/keymaps": "1.24.0",
-    "@theia/markers": "1.24.0",
-    "@theia/messages": "1.24.0",
-    "@theia/metrics": "1.24.0",
-    "@theia/mini-browser": "1.24.0",
-    "@theia/monaco": "1.24.0",
-    "@theia/navigator": "1.24.0",
-    "@theia/outline-view": "1.24.0",
-    "@theia/output": "1.24.0",
-    "@theia/plugin-dev": "1.24.0",
-    "@theia/plugin-ext": "1.24.0",
-    "@theia/plugin-ext-vscode": "1.24.0",
-    "@theia/preferences": "1.24.0",
-    "@theia/preview": "1.24.0",
-    "@theia/process": "1.24.0",
-    "@theia/property-view": "1.24.0",
-    "@theia/scm": "1.24.0",
-    "@theia/scm-extra": "1.24.0",
-    "@theia/search-in-workspace": "1.24.0",
-    "@theia/task": "1.24.0",
-    "@theia/terminal": "1.24.0",
-    "@theia/timeline": "1.24.0",
-    "@theia/toolbar": "1.24.0",
-    "@theia/typehierarchy": "1.24.0",
-    "@theia/userstorage": "1.24.0",
-    "@theia/variable-resolver": "1.24.0",
-    "@theia/vsx-registry": "1.24.0",
-    "@theia/workspace": "1.24.0",
+    "@theia/bulk-edit": "1.29.0",
+    "@theia/callhierarchy": "1.29.0",
+    "@theia/console": "1.29.0",
+    "@theia/core": "1.29.0",
+    "@theia/debug": "1.29.0",
+    "@theia/editor": "1.29.0",
+    "@theia/editor-preview": "1.29.0",
+    "@theia/electron": "1.29.0",
+    "@theia/external-terminal": "1.29.0",
+    "@theia/file-search": "1.29.0",
+    "@theia/filesystem": "1.29.0",
+    "@theia/getting-started": "1.29.0",
+    "@theia/git": "1.29.0",
+    "@theia/keymaps": "1.29.0",
+    "@theia/markers": "1.29.0",
+    "@theia/messages": "1.29.0",
+    "@theia/memory-inspector": "1.29.0",
+    "@theia/metrics": "1.29.0",
+    "@theia/mini-browser": "1.29.0",
+    "@theia/monaco": "1.29.0",
+    "@theia/navigator": "1.29.0",
+    "@theia/outline-view": "1.29.0",
+    "@theia/output": "1.29.0",
+    "@theia/plugin-dev": "1.29.0",
+    "@theia/plugin-ext": "1.29.0",
+    "@theia/plugin-ext-vscode": "1.29.0",
+    "@theia/preferences": "1.29.0",
+    "@theia/process": "1.29.0",
+    "@theia/property-view": "1.29.0",
+    "@theia/scm": "1.29.0",
+    "@theia/scm-extra": "1.29.0",
+    "@theia/search-in-workspace": "1.29.0",
+    "@theia/task": "1.29.0",
+    "@theia/terminal": "1.29.0",
+    "@theia/timeline": "1.29.0",
+    "@theia/toolbar": "1.29.0",
+    "@theia/typehierarchy": "1.29.0",
+    "@theia/userstorage": "1.29.0",
+    "@theia/variable-resolver": "1.29.0",
+    "@theia/vsx-registry": "1.29.0",
+    "@theia/workspace": "1.29.0",
     "fs-extra": "^9.0.1",
-    "cdt-cloud-blueprint-product": "1.24.0",
-    "@theia/cpp-debug": "1.19.0",
-    "theia-traceviewer": "0.2.0-next.033d953.0"
+    "cdt-cloud-blueprint-product": "1.29.0",
+    "@eclipse-cdt-cloud/blueprint-example-generator": "1.29.0",
+    "theia-traceviewer": "0.2.0-next.38d4e17.0"
   },
   "devDependencies": {
-    "@theia/cli": "1.24.0"
+    "@theia/cli": "1.29.0"
   },
   "scripts": {
     "prepare": "yarn build && yarn download:plugins",
@@ -96,7 +97,6 @@
   },
   "theiaPluginsDir": "plugins",
   "theiaPlugins": {
-    "vscode.git": "https://open-vsx.org/api/vscode/git/1.52.1/file/vscode.git-1.52.1.vsix",
     "vscode.markdown-language-features": "https://open-vsx.org/api/vscode/markdown-language-features/1.39.2/file/vscode.markdown-language-features-1.39.2.vsix",
     "vscode-builtin-extensions-pack": "https://open-vsx.org/api/eclipse-theia/builtin-extension-pack/1.50.1/file/eclipse-theia.builtin-extension-pack-1.50.1.vsix",
     "cdt-gdb-vscode": "https://open-vsx.org/api/eclipse-cdt/cdt-gdb-vscode/0.0.93/file/eclipse-cdt.cdt-gdb-vscode-0.0.93.vsix",
@@ -106,7 +106,12 @@
     "cdtcloud-clangd-contexts": "https://github.com/eclipse-cdt-cloud/clangd-contexts/releases/download/v0.8.0/cdtcloud-clangd-contexts-ext-0.8.0.vsix"
   },
   "theiaPluginsExcludeIds": [
+    "ms-vscode.js-debug-companion",
     "vscode.extension-editing",
+    "vscode.git",
+    "vscode.git-ui",
+    "vscode.github",
+    "vscode.github-authentication",
     "vscode.microsoft-authentication"
   ]
 }
