--- a/next/Jenkinsfile
+++ b/next/Jenkinsfile
@@ -58,8 +58,10 @@ spec:
                     }
                     steps {
                         container('theia-dev') {
-                            script {
-                                buildNext(false)
+                            withCredentials([string(credentialsId: "github-bot-token", variable: 'GITHUB_TOKEN')]) {
+                                script {
+                                    buildNext(false, 1200)
+                                }
                             }
                         }
                     }
@@ -75,7 +77,7 @@ spec:
                     }
                     steps {
                         script {
-                            buildNext(false)
+                            buildNext(false, 60)
                         }
                     }
                     post {
@@ -91,7 +93,8 @@ spec:
                     steps {
                         script {
                             sh "npm config set msvs_version 2017"
-                            buildNext(true)
+                            sh "npx node-gyp install 14.20.0"
+                            buildNext(true, 60)
                         }
                     }
                     post {
@@ -119,7 +122,7 @@ spec:
     }
 }
 
-def buildNext(boolean runTests) {
+def buildNext(boolean runTests, int sleepBetweenRetries) {
     int MAX_RETRY = 3
 
     checkout scm
@@ -140,6 +143,7 @@ def buildNext(boolean runTests) {
         sh(script: 'yarn --frozen-lockfile --force')
     } catch(error) {
         retry(MAX_RETRY) {
+            sleep(sleepBetweenRetries)
             echo "yarn failed - Retrying"
             sh(script: 'yarn --frozen-lockfile --force')        
         }
@@ -151,6 +155,7 @@ def buildNext(boolean runTests) {
         sh(script: 'yarn --force')
     } catch(error) {
         retry(MAX_RETRY) {
+            sleep(sleepBetweenRetries)
             echo "yarn failed - Retrying"
             sh(script: 'yarn --force')        
         }
@@ -162,6 +167,7 @@ def buildNext(boolean runTests) {
         sh(script: 'yarn --force')
     } catch(error) {
         retry(MAX_RETRY) {
+            sleep(sleepBetweenRetries)
             echo "yarn failed - Retrying"
             sh(script: 'yarn --force')        
         }
