Change website URL to eclipse.org/cdt-cloud
Contributed on behalf of STMicroelectronics.

--- a/applications/electron/package.json
+++ b/applications/electron/package.json
@@ -10,7 +10,7 @@
     "name": "CDT.cloud",
     "email": "cdt-cloud-dev@eclipse.org"
   },
-  "homepage": "https://cdt-cloud.io/",
+  "homepage": "https://www.eclipse.org/cdt-cloud/",
   "bugs": {
     "url": "https://github.com/eclipse-cdt-cloud/cdt-cloud-blueprint/issues"
   },
