--- a/theia-extensions/blueprint-example-generator/package.json
+++ b/theia-extensions/blueprint-example-generator/package.json
@@ -33,7 +33,7 @@
   "bugs": {
     "url": "https://github.com/eclipse-cdt-cloud/cdt-cloud-blueprint/issues"
   },
-  "homepage": "https://cdt-cloud.io/",
+  "homepage": "https://www.eclipse.org/cdt-cloud/",
   "files": [
     "resources",
     "lib",
