Rename task for running CMake executable
Contributed on behalf of STMicroelectronics.

--- a/theia-extensions/blueprint-example-generator/resources/cmake-example/.theia/tasks.json
+++ b/theia-extensions/blueprint-example-generator/resources/cmake-example/.theia/tasks.json
@@ -17,7 +17,7 @@
       }
     },
     {
-        "label": "Run example",
+        "label": "Launch Example C++",
         "type": "shell",
         "command": "${workspaceFolder}/Example",
         "dependsOn": [ "Binary build" ],
