Add task to run binary of CMake example (#45)
Fixes #44
Contributed on behalf of STMicroelectronics.

--- a/theia-extensions/blueprint-example-generator/resources/cmake-example/.theia/tasks.json
+++ b/theia-extensions/blueprint-example-generator/resources/cmake-example/.theia/tasks.json
@@ -15,6 +15,21 @@
       "runOptions": {
         "runOn": "folderOpen"
       }
+    },
+    {
+        "label": "Launch Example C++",
+        "type": "shell",
+        "command": "${workspaceFolder}/Example",
+        "dependsOn": [ "Binary build" ],
+        "presentation": {
+            "echo": true,
+            "reveal": "always",
+            "focus": true,
+            "panel": "shared",
+            "showReuseMessage": false,
+            "clear": true
+        },
+        "problemMatcher": []
     }
   ]
 }
