--- a/applications/browser/package.json
+++ b/applications/browser/package.json
@@ -87,7 +87,7 @@
       "bundle": "theia build --mode development",
       "compile": "tsc -b",
       "rebuild": "theia rebuild:browser --cacheRoot ../..",
-      "start": "yarn -s rebuild && theia start --plugins=local-dir:./plugins",
+      "start": "yarn -s rebuild && TRACE_SERVER_PATH=../../tracecompass-server/trace-compass-server/tracecompass-server theia start --plugins=local-dir:./plugins",
       "start:debug": "yarn -s start --log-level=debug",
       "start:watch": "concurrently --kill-others -n tsc,bundle,run -c red,yellow,green \"tsc -b -w --preserveWatchOutput\" \"yarn -s watch:bundle\" \"yarn -s start\"",
       "watch": "concurrently --kill-others -n tsc,bundle -c red,yellow \"tsc -b -w --preserveWatchOutput\" \"yarn -s watch:bundle\"",
