Package the trace server in the CDTCloudBlueprint.AppImage for Linux
Run "yarn tracecompass-server:download" before package the application
image for Linux.

Partially fixes #17.

Signed-off-by: Bernd Hufmann <bernd.hufmann@ericsson.com>

--- a/applications/electron/electron-builder.yml
+++ b/applications/electron/electron-builder.yml
@@ -51,6 +51,9 @@ linux:
   publish:
     provider: generic
     url: "https://download.eclipse.org/theia/cdt-cloud/latest/linux"
+  extraResources:
+    - from: ../../tracecompass-server/trace-compass-server
+      to: trace-compass-server
 
 nsis:
   menuCategory: true
