--- a/applications/electron/package.json
+++ b/applications/electron/package.json
@@ -126,7 +126,8 @@
     "watch": "concurrently -n compile,bundle \"theiaext watch --preserveWatchOutput\" \"theia build --watch --mode development\"",
     "start": "yarn -s rebuild && TRACE_SERVER_PATH=../../tracecompass-server/trace-compass-server/tracecompass-server electron scripts/theia-electron-main.js",
     "start:debug": "yarn start --log-level=debug",
-    "package": "yarn clean:dist && electron-builder -c.mac.identity=null --publish never",
+    "tracecompass-server:download": "yarn --cwd ../.. tracecompass-server:download",
+    "package": "yarn tracecompass-server:download && yarn clean:dist && electron-builder -c.mac.identity=null --publish never",
     "deploy": "yarn clean:dist && electron-builder -c.mac.identity=null --publish always",
     "package:preview": "yarn clean:dist && electron-builder -c.mac.identity=null --dir",
     "update:checksum": "ts-node scripts/update-checksum.ts",
