Workaround rate limitation issues with open-vsx
Download the plug-ins sequentially instead of parallel. This should
avoid the failure "Download:plugins fails with 429".

see discussion:
https://community.theia-ide.org/t/download-plugins-fails-with-429/2659

Signed-off-by: Bernd Hufmann <bernd.hufmann@ericsson.com>

--- a/applications/docker/package.json
+++ b/applications/docker/package.json
@@ -91,7 +91,7 @@
     "watch": "concurrently --kill-others -n tsc,bundle -c red,yellow \"tsc -b -w --preserveWatchOutput\" \"yarn -s watch:bundle\"",
     "watch:bundle": "theia build --watch --mode development",
     "watch:compile": "tsc -b -w",
-    "download:plugins": "theia download:plugins"
+    "download:plugins": "theia download:plugins --parallel=false"
   },
   "theiaPluginsDir": "plugins",
   "theiaPlugins": {
