--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
     "**/@theia/editor": "1.34.4",
     "**/@theia/filesystem": "1.34.4",
     "**/@theia/request": "1.34.4",
-    "**/@theia/variable-resolver": "1.34.4"
+    "**/@theia/variable-resolver": "1.34.4",
+    "**/timeline-chart": "0.3.0-next.82a0ac9.0",
+    "**/tsp-typescript-client": "0.4.0-next.143a5ab.0"
   }
 }
