--- a/applications/electron/package.json
+++ b/applications/electron/package.json
@@ -1,13 +1,13 @@
 {
   "private": true,
   "name": "cdt-cloud-blueprint",
-  "description": "CDT.cloud Blueprint is a template for building custom web-based C/C++ tools",
-  "productName": "CDT.cloud Blueprint",
+  "description": "CDT Cloud Blueprint is a template for building custom web-based C/C++ tools",
+  "productName": "CDT Cloud Blueprint",
   "version": "1.34.4",
   "main": "scripts/theia-electron-main.js",
   "license": "EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0",
   "author": {
-    "name": "CDT.cloud",
+    "name": "CDT Cloud",
     "email": "cdt-cloud-dev@eclipse.org"
   },
   "homepage": "https://www.eclipse.org/cdt-cloud/",
