--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.34.4",
   "license": "EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0",
   "author": {
-    "name": "CDT.cloud"
+    "name": "CDT Cloud"
   },
   "homepage": "https://www.eclipse.org/cdt-cloud/",
   "bugs": {
