--- a/theia-extensions/theia-blueprint-product/package.json
+++ b/theia-extensions/theia-blueprint-product/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "name": "cdt-cloud-blueprint-product",
   "version": "1.34.4",
-  "description": "CDT.cloud Blueprint Product Branding",
+  "description": "CDT Cloud Blueprint Product Branding",
   "dependencies": {
     "@theia/core": "1.34.4",
     "@theia/getting-started": "1.34.4",
