--- a/theia-extensions/theia-blueprint-updater/package.json
+++ b/theia-extensions/theia-blueprint-updater/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "name": "cdt-cloud-blueprint-updater",
   "version": "1.34.4",
-  "description": "CDT.cloud Blueprint Updater",
+  "description": "CDT Cloud Blueprint Updater",
   "dependencies": {
     "@theia/core": "1.34.4",
     "@theia/output": "1.34.4",
