--- a/theia-extensions/blueprint-example-generator/package.json
+++ b/theia-extensions/blueprint-example-generator/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@eclipse-cdt-cloud/blueprint-example-generator",
   "version": "1.34.4",
-  "description": "Extension for generating examples in CDT Cloud blueprint",
+  "description": "Extension for generating examples in CDT Cloud Blueprint",
   "dependencies": {
     "@theia/core": "1.34.4",
     "@theia/workspace": "1.34.4",
