--- a/applications/electron/package.json
+++ b/applications/electron/package.json
@@ -132,9 +132,9 @@
     "start": "yarn -s rebuild && TRACE_SERVER_PATH=../../tracecompass-server/trace-compass-server/tracecompass-server electron scripts/theia-electron-main.js",
     "start:debug": "yarn start --log-level=debug",
     "tracecompass-server:download": "yarn --cwd ../.. tracecompass-server:download",
-    "package": "yarn tracecompass-server:download && yarn clean:dist && electron-builder -c.mac.identity=null --publish never",
-    "deploy": "yarn clean:dist && electron-builder -c.mac.identity=null --publish always",
-    "package:preview": "yarn clean:dist && electron-builder -c.mac.identity=null --dir",
+    "package": "yarn tracecompass-server:download && yarn clean:dist && yarn -s rebuild && electron-builder -c.mac.identity=null --publish never",
+    "deploy": "yarn clean:dist && yarn -s rebuild && electron-builder -c.mac.identity=null --publish always",
+    "package:preview": "yarn clean:dist && yarn -s rebuild && electron-builder -c.mac.identity=null --dir",
     "update:checksum": "ts-node scripts/update-checksum.ts",
     "update:blockmap": "ts-node scripts/update-blockmap.ts",
     "update:next": "ts-node ../../scripts/update-theia-to-next.ts",
